vmhostrules.v4
# Generated by iptables-save v1.8.7 on Tue Aug 13 11:15:50 2024
*filter
:INPUT ACCEPT [0:0]
:FORWARD DROP [304:23785]
:OUTPUT ACCEPT [0:0]
:DOCKER - [0:0]
:DOCKER-ISOLATION-STAGE-1 - [0:0]
:DOCKER-ISOLATION-STAGE-2 - [0:0]
:DOCKER-USER - [0:0]
-A INPUT -p udp -m udp --dport 500 -j ACCEPT
-A INPUT -p udp -m udp --dport 4500 -j ACCEPT
-A INPUT -p esp -j ACCEPT
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-ISOLATION-STAGE-1
-A FORWARD -o br-dfc4f9481352 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-dfc4f9481352 -j DOCKER
-A FORWARD -i br-dfc4f9481352 ! -o br-dfc4f9481352 -j ACCEPT
-A FORWARD -i br-dfc4f9481352 -o br-dfc4f9481352 -j ACCEPT
-A FORWARD -o br-153047dc0a2b -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-153047dc0a2b -j DOCKER
-A FORWARD -i br-153047dc0a2b ! -o br-153047dc0a2b -j ACCEPT
-A FORWARD -i br-153047dc0a2b -o br-153047dc0a2b -j ACCEPT
-A FORWARD -o br-964d7c683983 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-964d7c683983 -j DOCKER
-A FORWARD -i br-964d7c683983 ! -o br-964d7c683983 -j ACCEPT
-A FORWARD -i br-964d7c683983 -o br-964d7c683983 -j ACCEPT
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A DOCKER-ISOLATION-STAGE-1 -i br-dfc4f9481352 ! -o br-dfc4f9481352 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-153047dc0a2b ! -o br-153047dc0a2b -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-964d7c683983 ! -o br-964d7c683983 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i docker0 ! -o docker0 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -j RETURN
-A DOCKER-ISOLATION-STAGE-2 -o br-dfc4f9481352 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-153047dc0a2b -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-964d7c683983 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o docker0 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -j RETURN
-A DOCKER-USER -j RETURN
COMMIT
# Completed on Tue Aug 13 11:15:50 2024
# Generated by iptables-save v1.8.7 on Tue Aug 13 11:15:50 2024
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 100.64.0.0/10 ! -o br-dfc4f9481352 -j MASQUERADE
-A POSTROUTING -s 172.17.200.0/24 ! -o br-153047dc0a2b -j MASQUERADE
-A POSTROUTING -s 10.100.0.0/24 ! -o br-964d7c683983 -j MASQUERADE
-A POSTROUTING -s 172.18.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 10.100.0.0/24 -o ens192 -j MASQUERADE
-A POSTROUTING -s 172.17.200.0/24 -o ens224 -j MASQUERADE
-A POSTROUTING -s 100.64.0.0/10 -o ens256 -j MASQUERADE
-A DOCKER -i br-dfc4f9481352 -j RETURN
-A DOCKER -i br-153047dc0a2b -j RETURN
-A DOCKER -i br-964d7c683983 -j RETURN
-A DOCKER -i docker0 -j RETURN
COMMIT
# Completed on Tue Aug 13 11:15:50 2024
